# point-transfer

./: .gitlab-ci.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  add_dependencies.sh  backend-ci.yml  main.py  pyproject.toml  requirements.txt
backend/app/database/: __init__.py
backend/app/models/: user.py
backend/app/routes/: auth.py  transactions.py  users.py
backend/app/utils/: __init__.py  auth.py
backend/src/: main.py
backend/src/app/database/: db.py
backend/src/app/models/: __init__.py  transaction.py
backend/src/app/routes/: __init__.py  auth.py  transactions.py
backend/src/app/utils/: auth.py
frontend/: .env.development  .gitignore  Dockerfile  convert-to-traditional.js  frontend-ci.yml  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: LocalTime.vue  NavBar.vue  QRCodeGenerator.vue  QRCodeScanner.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js  mockData.js
frontend/src/store/: index.js
frontend/src/utils/: dateUtils.js
frontend/src/views/: DashboardView.vue  LoginView.vue  PublicTransactionView.vue  ReceivePointsView.vue  RegisterView.vue  SendPointsView.vue
